# ray-demo

./: .gitignore  README.md  docker-compose.yml  pyproject.toml  ray_data.ipynb
