[project]
name = "ray-demo"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "boto3>=1.35.54",
    "geopy>=2.4.1",
    "ipywidgets>=8.1.5",
    "jupyterlab>=4.2.5",
    "modin[ray]>=0.32.0",
    "pyarrow>=17.0.0",
    "pyiceberg[glue]>=0.7.1",
    "ray[data,default]>=2.37.0",
]
